force-app/main/default/objects/ChartofAccounts__c/ChartofAccounts__c.object-meta.xml
<CustomObject>
    <description>Chart of accounts information including departments and CAE code.</description>
    <label>Chart of Accounts</label>
    <nameField>
        <label>Designation Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart of Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>