force-app/main/default/objects/ChartofAccounts__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
            <value>
                <fullName>Temp Restricted</fullName>
                <default>true</default>
                <label>Temp Restricted</label>
            </value>
            <value>
                <fullName>Temp Restricted - Time-based</fullName>
            </value>
            <value>
                <fullName>Perm Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>