force-app/main/default/objects/ChartofAccounts__c/fields/Category_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Category_Number_c__c</fullName>
    <formula>IF( CONTAINS ( TEXT ( Fiscal_Sponsorship__c ) , &quot;INWF&quot;), &quot;2200&quot;, 
IF( CONTAINS ( TEXT ( Fiscal_Sponsorship__c ) , &quot;WFIMW&quot;), &quot;2300&quot;, 
IF( NOT ( ISBLANK ( TEXT ( Fiscal_Sponsorship__c ) )), &quot;2400&quot;, /* If not INWF and not blank, assume it&apos;s a women&apos;s fund. */
IF( ISPICKVAL(Category__c, &quot;Unrestricted&quot;), &quot;1100&quot;, 
IF( ISPICKVAL(Category__c, &quot;Temp Restricted&quot;), &quot;2100&quot;, 
IF( ISPICKVAL(Category__c, &quot;Temp Restricted - Time-based&quot;), &quot;2150&quot;, 
IF( ISPICKVAL(Category__c, &quot;Perm Restricted&quot;), &quot;3000&quot;, 
&quot;??&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Number</label>
    <type>Text</type>
</CustomField>