force-app/main/default/objects/ChartofAccounts__c/fields/Country_text__c.field-meta.xml
<CustomField>
    <fullName>Country_text__c</fullName>
    <description>Text field used to store information about country-specific designations.</description>
    <inlineHelpText>Text field used to store information about country-specific designations.</inlineHelpText>
    <label>Country text</label>
    <type>TextArea</type>
</CustomField>