force-app/main/default/objects/ChartofAccounts__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Any free text information you wish to associated with this item in the Chart of Accounts.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>