force-app/main/default/objects/ChartofAccounts__c/fields/Finance_initiative_sub_account__c.field-meta.xml
<CustomField>
    <fullName>Finance_initiative_sub_account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then this chart of accounts corresponds to a Finance initiative that normally isn&apos;t assigned by non-Finance staff, for example, to opportunities, gifts, and projections.</description>
    <inlineHelpText>If checked, then this chart of accounts corresponds to a Finance initiative that normally isn&apos;t assigned by non-Finance staff, for example, to opportunities, gifts, and projections.</inlineHelpText>
    <label>Finance initiative sub-account</label>
    <type>Checkbox</type>
</CustomField>