force-app/main/default/objects/ChartofAccounts__c/fields/Fiscal_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsorship__c</fullName>
    <description>Fiscal sponsorship program through which funding is channeled to partner women&apos;s funds.</description>
    <inlineHelpText>Fiscal sponsorship program through which funding is channeled to partner women&apos;s funds.</inlineHelpText>
    <label>Fiscal Sponsorship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tewa</fullName>
            </value>
            <value>
                <fullName>Semillas</fullName>
            </value>
            <value>
                <fullName>WHEAT Trust</fullName>
            </value>
            <value>
                <fullName>Cent. Amer. Women&apos;s Fund</fullName>
            </value>
            <value>
                <fullName>Mongolian Women&apos;s Fund</fullName>
            </value>
            <value>
                <fullName>Reconstruction Women&apos;s Fund</fullName>
            </value>
            <value>
                <fullName>Slovak-Czech Women&apos;s Fund</fullName>
            </value>
            <value>
                <fullName>Ukrainian Women&apos;s Fund</fullName>
            </value>
            <value>
                <fullName>Muslim Women WFIMW</fullName>
            </value>
            <value>
                <fullName>INWF Dues</fullName>
            </value>
            <value>
                <fullName>INWF Donations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>