force-app/main/default/objects/ChartofAccounts__c/fields/GFW_ChartofAccount_Id__c.field-meta.xml
<CustomField>
    <fullName>GFW_ChartofAccount_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id of Chart of Account record in GFW</description>
    <externalId>true</externalId>
    <label>GFW ChartofAccount Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>