force-app/main/default/objects/ChartofAccounts__c/fields/Impact_Area__c.field-meta.xml
<CustomField>
    <fullName>Impact_Area__c</fullName>
    <description>Impact areas identified by LT.</description>
    <inlineHelpText>Impact areas identified by LT.</inlineHelpText>
    <label>Impact Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zero Violence</fullName>
            </value>
            <value>
                <fullName>Sexual &amp; Reproductive Health &amp; Rights</fullName>
            </value>
            <value>
                <fullName>Economic &amp; Political Empowerment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>