force-app/main/default/objects/ChartofAccounts__c/fields/Impact_Area_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Impact_Area_Number_c__c</fullName>
    <formula>/* Impact area is multi-select - map to Unspecified if there are two or more selections. */
IF ( ISBLANK ( Impact_Area__c), &quot;100&quot;,
IF ( /* Compute number of picklist items selected. */
 IF( INCLUDES( Impact_Area__c , &quot;Zero Violence&quot;) , 1, 0) + 
 IF( INCLUDES( Impact_Area__c , &quot;Sexual &amp; Reproductive Health &amp; Rights&quot;) , 1, 0) + 
 IF( INCLUDES( Impact_Area__c , &quot;Economic &amp; Political Empowerment&quot;) , 1, 0) + 
 IF( INCLUDES( Impact_Area__c , &quot;Multimedia (Comms only)&quot;) , 1, 0)
 &gt; 1, &quot;100&quot;, /* Multi-select is considered &quot;Unspecified&quot; by Finance */

IF( INCLUDES( Impact_Area__c , &quot;Zero Violence&quot;) , &quot;200&quot;, 
IF( INCLUDES( Impact_Area__c , &quot;Sexual &amp; Reproductive Health &amp; Rights&quot;) , &quot;300&quot;, 
IF( INCLUDES( Impact_Area__c , &quot;Economic &amp; Political Empowerment&quot;) , &quot;400&quot;, 
IF( INCLUDES( Impact_Area__c , &quot;Multimedia (Comms only)&quot;) , &quot;900&quot;, 
&quot;100&quot; /* Unspecified */
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact Area Number</label>
    <type>Text</type>
</CustomField>