force-app/main/default/objects/ChartofAccounts__c/fields/Non_grantmaking__c.field-meta.xml
<CustomField>
    <fullName>Non_grantmaking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if funds raised under this chart of accounts should not be used for grantmaking</description>
    <inlineHelpText>Checked if funds raised under this chart of accounts should not be used for grantmaking</inlineHelpText>
    <label>Non-grantmaking</label>
    <type>Checkbox</type>
</CustomField>