force-app/main/default/objects/ChartofAccounts__c/fields/Sync_Log_Record__c.field-meta.xml
<CustomField>
    <fullName>Sync_Log_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related sync log record (used to create/update this Chart of Account record).</description>
    <label>Sync Log Record</label>
    <referenceTo>Sync_Log_Record__c</referenceTo>
    <relationshipLabel>Chart of Accounts</relationshipLabel>
    <relationshipName>Chart_of_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>