force-app/main/default/objects/ChartofAccounts__c/fields/Themes__c.field-meta.xml
<CustomField>
    <fullName>Themes__c</fullName>
    <description>Thematic areas in which grantmaking is classified: Building Peace and Ending Gender-Based Violence (GBV); Increasing Access to Education (IAE); Ensuring Economic and Environmental Justice (EEJ); Expanding Civic and Political Participation (CPP); Advancing Health and Sexual &amp; Reproductive Rights (SRR); Fostering Social Change Philanthropy (SCP)</description>
    <inlineHelpText>Ending Gender-Based Violence (GBV); Access to Education (IAE); Economic &amp; Environmental Justice (EEJ); Civic &amp; Political Participation (CPP); Health &amp; Sexual &amp; Reproductive Rights (SRR); Social Change Philanthropy (SCP)</inlineHelpText>
    <label>Themes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GBV</fullName>
            </value>
            <value>
                <fullName>EEJ</fullName>
            </value>
            <value>
                <fullName>SRR</fullName>
            </value>
            <value>
                <fullName>CPP</fullName>
            </value>
            <value>
                <fullName>IAE</fullName>
            </value>
            <value>
                <fullName>SCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>