force-app/main/default/objects/ChartofAccounts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Not Legacy</label>
</ListView>