force-app/main/default/objects/ChartofAccounts__c/listViews/Recent_Chart_of_Accounts.listView-meta.xml
<ListView>
    <fullName>Recent_Chart_of_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Impact_Area__c</columns>
    <columns>Narrative__c</columns>
    <columns>Themes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <label>Recent Chart of Accounts</label>
</ListView>